# Docker_Example

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
src/: main.cpp
